[gd_scene load_steps=18 format=3 uid="uid://cl2v31dxkoeoq"]

[ext_resource type="Texture2D" uid="uid://cbqebssavvctr" path="res://assets/used_assets/textures/powerplants/pp_sprite_on_carbon_sequestration.png" id="2_jdsyi"]
[ext_resource type="Shader" path="res://src/gdscript/shaders/outline.gdshader" id="2_xbwqu"]
[ext_resource type="Script" path="res://src/gdscript/carbon_sequestration/texture_button.gd" id="3_dvmlx"]
[ext_resource type="Script" path="res://src/gdscript/carbon_sequestration/info_frame.gd" id="5_wq8x4"]
[ext_resource type="Texture2D" uid="uid://fe0i52vl7ck6" path="res://assets/UI Elements/All-HQ-Assets-D_0007s_0006_Slider-bar-horizontal.png" id="8_2gvx8"]
[ext_resource type="Script" path="res://src/gdscript/carbon_sequestration/production_costs_value.gd" id="8_gdhxi"]
[ext_resource type="Texture2D" uid="uid://bk3lb51erle8l" path="res://assets/used_assets/textures/backplates/backplate_1.png" id="8_hhh10"]
[ext_resource type="Texture2D" uid="uid://xmi4fk7xmp5j" path="res://assets/UI Elements/All-HQ-Assets-D_0007s_0032_Ball-Slider.png" id="9_om5ks"]
[ext_resource type="Script" path="res://src/gdscript/carbon_sequestration/emissions_value.gd" id="10_g6ev4"]
[ext_resource type="FontFile" uid="uid://domoiqitlbtwi" path="res://assets/used_assets/fonts/llewie/Llewie.ttf" id="10_v8nju"]
[ext_resource type="Script" path="res://src/gdscript/carbon_sequestration/slider.gd" id="11_dcx5m"]
[ext_resource type="Texture2D" uid="uid://cd23afs6x11al" path="res://assets/used_assets/textures/screens/screen_1.png" id="12_1skat"]
[ext_resource type="Texture2D" uid="uid://b76v2w1on0f0u" path="res://assets/used_assets/textures/icons/chalk_money.png" id="13_rx8vj"]
[ext_resource type="Theme" uid="uid://cj6gnnfa8ibb0" path="res://scenes/windows/label_themes.tres" id="14_0kanp"]
[ext_resource type="Texture2D" uid="uid://bpt1e486wuscd" path="res://assets/used_assets/textures/icons/chalk_emission.png" id="16_ot4pu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ca5d"]
shader = ExtResource("2_xbwqu")
shader_parameter/line_color = Vector4(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/frequency = 10.0
shader_parameter/phase_speed = 1.0
shader_parameter/show = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yiqg2"]

[node name="CarbonSequestration" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="." groups=["pp_sprites"]]
material = SubResource("ShaderMaterial_8ca5d")
layout_mode = 0
offset_left = -105.15
offset_top = -76.8
offset_right = 595.85
offset_bottom = 435.2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(350.5, 256)
toggle_mode = true
texture_normal = ExtResource("2_jdsyi")
script = ExtResource("3_dvmlx")

[node name="InfoFrame" type="TextureRect" parent="." groups=["pp_info_frames"]]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -374.9
offset_top = -1172.7
offset_right = 842.1
offset_bottom = -353.7
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(608, 819)
mouse_filter = 0
texture = ExtResource("8_hhh10")
script = ExtResource("5_wq8x4")

[node name="PlantName" type="Label" parent="InfoFrame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -504.0
offset_top = 32.077
offset_right = 504.0
offset_bottom = 92.077
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.752941)
theme_override_fonts/font = ExtResource("10_v8nju")
theme_override_font_sizes/font_size = 43
text = "CARBON_SEQUESTRATION"
horizontal_alignment = 1

[node name="Screen" type="TextureRect" parent="InfoFrame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -281.0
offset_right = 515.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_1skat")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InfoFrame/Screen"]
layout_mode = 0
offset_left = 24.0
offset_top = 13.0
offset_right = 987.0
offset_bottom = 368.0
theme_override_constants/separation = 130

[node name="VBoxContainer" type="VBoxContainer" parent="InfoFrame/Screen/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 84

[node name="ProductionCosts" type="MarginContainer" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Control" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="IconRed" type="Sprite2D" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts/Title"]
modulate = Color(1, 0.541176, 0.596078, 0.517647)
position = Vector2(48, 44)
scale = Vector2(1.3, 1.3)
texture = ExtResource("13_rx8vj")

[node name="IconBlue" type="Sprite2D" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts/Title"]
modulate = Color(0.219608, 0.756863, 0.788235, 1)
position = Vector2(46, 43)
scale = Vector2(1.3, 1.3)
texture = ExtResource("13_rx8vj")

[node name="Label" type="Label" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts/Title"]
layout_mode = 2
offset_left = 104.0
offset_top = 16.0
offset_right = 284.0
offset_bottom = 66.0
size_flags_horizontal = 0
theme = ExtResource("14_0kanp")
theme_type_variation = &"Screen"
theme_override_colors/font_shadow_color = Color(1, 0.541176, 0.596078, 0.517647)
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/font_size = 50
text = "PROD_COST"

[node name="Value" type="Control" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Value" type="Label" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts/Value"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 18.0
offset_bottom = 68.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("14_0kanp")
theme_type_variation = &"Screen"
theme_override_colors/font_color = Color(1, 0.129412, 0.207843, 1)
theme_override_font_sizes/font_size = 50
text = "000M CHF"
horizontal_alignment = 2
script = ExtResource("8_gdhxi")

[node name="Pollution" type="MarginContainer" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Control" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution"]
layout_mode = 2

[node name="IconRed" type="Sprite2D" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution/Title"]
modulate = Color(1, 0.541176, 0.596078, 0.517647)
position = Vector2(48, 44)
scale = Vector2(1.2, 1.2)
texture = ExtResource("16_ot4pu")

[node name="IconBlue" type="Sprite2D" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution/Title"]
modulate = Color(0.219608, 0.756863, 0.788235, 1)
position = Vector2(46, 43.0001)
scale = Vector2(1.2, 1.2)
texture = ExtResource("16_ot4pu")

[node name="Label" type="Label" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution/Title"]
layout_mode = 2
offset_left = 104.0
offset_top = 20.0
offset_right = 284.0
offset_bottom = 70.0
size_flags_horizontal = 0
theme = ExtResource("14_0kanp")
theme_type_variation = &"Screen"
theme_override_colors/font_shadow_color = Color(1, 0.541176, 0.596078, 0.517647)
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/font_size = 50
text = "POLLUTION"

[node name="Value" type="Control" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Value" type="Label" parent="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution/Value"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
theme = ExtResource("14_0kanp")
theme_type_variation = &"Screen"
theme_override_colors/font_color = Color(0, 0.882, 0, 1)
theme_override_font_sizes/font_size = 50
text = "000.00Mt CO2"
horizontal_alignment = 2
script = ExtResource("10_g6ev4")

[node name="CarbonSlider" type="Control" parent="InfoFrame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.115
offset_top = -180.769
offset_right = -210.115
offset_bottom = -140.769
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)

[node name="TextureRect" type="TextureRect" parent="InfoFrame/CarbonSlider"]
layout_mode = 1
offset_right = 278.0
offset_bottom = 10.0
texture = ExtResource("8_2gvx8")
stretch_mode = 2

[node name="HSlider" type="HSlider" parent="InfoFrame/CarbonSlider" groups=["draggables"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -30.3846
offset_right = 283.0
offset_bottom = -0.384613
grow_vertical = 2
focus_mode = 0
theme_override_icons/grabber = ExtResource("9_om5ks")
theme_override_icons/grabber_highlight = ExtResource("9_om5ks")
theme_override_icons/grabber_disabled = ExtResource("9_om5ks")
theme_override_styles/slider = SubResource("StyleBoxEmpty_yiqg2")
max_value = 5.5
step = 0.02
scrollable = false
ticks_on_borders = true
script = ExtResource("11_dcx5m")

[connection signal="hide_info_frame_requested" from="TextureButton" to="InfoFrame" method="_on_hide_info_frame_requested"]
[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="show_info_frame_requested" from="TextureButton" to="InfoFrame" method="_on_show_info_frame_requested"]
[connection signal="toggled" from="TextureButton" to="TextureButton" method="_on_toggled"]
[connection signal="value_changed" from="InfoFrame/CarbonSlider/HSlider" to="InfoFrame/Screen/VBoxContainer/VBoxContainer/ProductionCosts/Value/Value" method="_on_slider_value_changed"]
[connection signal="value_changed" from="InfoFrame/CarbonSlider/HSlider" to="InfoFrame/Screen/VBoxContainer/VBoxContainer/Pollution/Value/Value" method="_on_slider_value_changed"]
[connection signal="value_changed" from="InfoFrame/CarbonSlider/HSlider" to="InfoFrame/CarbonSlider/HSlider" method="_on_value_changed"]
